added playlist,songs,albums fargemnts by adding view pager and tab bar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">Music Player</string>
+    <string name="playlists">Playlists</string>
+    <string name="songs">Songs</string>
+    <string name="albums">Albums</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
