added: viewPager2 recyclerView in songs_fragment layout
and
removed:
viewPager

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string-array name="tabLayput_array">
+    <string-array name="tabLayout_array">
         <item>Playlists</item>
         <item>Songs</item>
         <item>Albums</item>
