added: modified tabLayout icons
and
removed:
NULL

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
         <item>Songs</item>
         <item>Albums</item>
     </string-array>
+    <string name="app_name">MusicPlayer</string>
 </resources>
