added: songs_cardview player_menu necessary icons
modified:
player layout

removed tool bar logo

corrected:
errors

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,6 @@
     <string name="to_repeat">To repeat</string>
     <string name="to_open_menu">To open menu</string>
     <string name="to_add_to_favourites">To add to favourites</string>
-    <string name="to_shufle">to shufle</string>
+    <string name="to_shuffle">to shuffle</string>
     <string name="to_collapse">To collapse</string>
 </resources>
